# ha-foxess-cloud

./: .gitignore  AGENTS.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/: FUNDING.yml
custom_components/foxess_cloud/: __init__.py  api_call_tracker.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  manifest.json  number.py  select.py  sensor.py  services.yaml  strings.json  switch.py  time.py
custom_components/foxess_cloud/api_client/: __init__.py  __main__.py  client.py  errors.py  models.py
custom_components/foxess_cloud/profiles/: __init__.py  base.py  h3.py  kh.py
custom_components/foxess_cloud/translations/: en.json
